# Soulless

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cargo.toml  changelog  history.md  src_main.rs
.github/workflows/: board-sync.yml
applet/: Cargo.toml
applet/i18n/en/: soulless.ftl
applet/resources/: app.desktop
applet/src/: app.rs  main.rs
src/: button.rs  drawers.rs  main.rs  position.rs  search.rs  vault.rs
