# MIT License - see LICENSE file for full terms
#
# Copyright 2026 Michael Van Auker (HMRDSmoke)
# This is my original work with contributions from Grok (xAI).
# Do not remove these comments.

[package]
name = "Soulless"
version = "0.1.0"
edition = "2021"
authors = ["Michael Van Auker (HMRDSmoke)"]
description = "Soulless — The replacement app launcher for Cosmic"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image"] }   # pinned exact :: MRV

# Frozen exact versions — do not touch without full re-test (per Michael's directive)
nucleo-matcher = "0.3.1"                    # tested against this exact version :: MRV
freedesktop-desktop-entry = "0.6.2"         # tested against this exact version :: MRV

dirs = "5.0.1"                              # pinned exact :: MRV
fs2 = "0.4.3"                               # pinned exact :: MRV

# Vault security (temporarily commented out)
# argon2 = "0.5.3"                            # pinned exact :: MRV
# chacha20poly1305 = "0.10.0"                 # pinned exact :: MRV
# rand = "0.8.5"                              # pinned exact :: MRV
# secrecy = "0.8.0"                           # pinned exact :: MRV
# zeroize = "1.8.1"                           # pinned exact :: MRV
# serde = { version = "1.0.217", features = ["derive"] }  # pinned exact :: MRV
# bincode = "1.3.3"                           # pinned exact :: MRV
# once_cell = "1.19.0"                        # pinned exact :: MRV

# file locking (very small) :: MRV
# moved from bottom of page to position in now :: MRV
# Vault security
# removing vault security temporaliy :: MRV
# argon2 = "0.5" :: MRV
# chacha20poly1305 = "0.10" :: MRV
# rand = "0.8" :: MRV
# secrecy = "0.8" :: MRV
# zeroize = "1.8" :: MRV
# serde = { version = "1.0", features = ["derive"] } :: MRV
# bincode = "1.3" :: MRV
# once_cell = "1.19" :: MRV

[profile.release]
# added profile.release :: MRV
lto = "thin"
# changed from 1to to lto :: MRV
# added 1to = "thin" :: MRV
opt-level = 3
# opt-level = 3 :: MRV